--- a/.tekton/build-microshift-rpm-nmirasch-push.yaml
+++ b/.tekton/build-microshift-rpm-nmirasch-push.yaml
@@ -147,8 +147,12 @@ spec:
             #!/bin/bash
             set -euxo pipefail
             
-            # The source code is already in the working directory from the
-            # clone-repository task. We can execute the script directly.
+            echo "Extracting source code from artifact..."
+            oc image extract $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT) --path /source:. -n $(context.pipelineRun.namespace)
+            
+            echo "Source extracted. Running spec generation script..."
+            
+            # Now the script can be found and executed
             export ARGO_CD_IMAGE_URL_WITH_TAG="$(params.argo-cd-url)"
             export REDIS_IMAGE_URL_WITH_TAG="$(params.redis-url)"
             export CI_ARGO_CD_UPSTREAM_COMMIT="$(params.source-commit)"
