changed clone-repository to standart

--- a/.tekton/build-microshift-rpm-nmirasch-push.yaml
+++ b/.tekton/build-microshift-rpm-nmirasch-push.yaml
@@ -59,26 +59,23 @@ spec:
         value: "true"
     
     - name: clone-repository
-      runAfter: [init]
+      runAfter: [ init ]
       when:
       - input: $(tasks.init.results.build)
         operator: in
-        values: ["true"]
+        values: [ "true" ]
+      # Use the standard git-clone ClusterTask which writes to the workspace
       taskRef:
-        resolver: bundles
-        params:
-        - name: bundle
-          value: quay.io/konflux-ci/tekton-catalog/task-git-clone-oci-ta:0.1@sha256:be82c55346e8810bd1edc5547f864064da6945979baccca7dfc99990b392a02b
-        - name: name
-          value: git-clone-oci-ta
+        name: git-clone
+        kind: ClusterTask
       params:
       - name: url
         value: $(params.git-url)
       - name: revision
         value: $(params.revision)
-      - name: ociStorage
-        value: $(params.output-image).git
       workspaces:
+      - name: output # This task uses a workspace named 'output'
+        workspace: source
       - name: basic-auth
         workspace: git-auth
     
