--- a/.tekton/build-microshift-rpm-nmirasch-push.yaml
+++ b/.tekton/build-microshift-rpm-nmirasch-push.yaml
@@ -46,12 +46,15 @@ spec:
     tasks:
     - name: init
       taskRef:
+        apiVersion: tekton.dev/v1
         resolver: bundles
         params:
         - name: bundle
           value: quay.io/konflux-ci/tekton-catalog/task-init:0.2@sha256:08e18a4dc5f947c1d20e8353a19d013144bea87b72f67236b165dd4778523951
         - name: name
           value: init
+        - name: kind
+          value: task
       params:
       - name: image-url
         value: $(params.output-image)
@@ -59,23 +62,29 @@ spec:
         value: "true"
     
     - name: clone-repository
-      runAfter: [ init ]
+      runAfter: [init]
       when:
       - input: $(tasks.init.results.build)
         operator: in
-        values: [ "true" ]
-      # Use the standard git-clone ClusterTask which writes to the workspace
+        values: ["true"]
       taskRef:
-        name: git-clone
-        kind: ClusterTask
+        apiVersion: tekton.dev/v1
+        resolver: bundles
+        params:
+        - name: bundle
+          value: quay.io/konflux-ci/tekton-catalog/task-git-clone-oci-ta:0.1@sha256:be82c55346e8810bd1edc5547f864064da6945979baccca7dfc99990b392a02b
+        - name: name
+          value: git-clone-oci-ta
+        - name: kind
+          value: task
       params:
       - name: url
         value: $(params.git-url)
       - name: revision
         value: $(params.revision)
+      - name: ociStorage
+        value: $(params.output-image).git
       workspaces:
-      - name: output # This task uses a workspace named 'output'
-        workspace: source
       - name: basic-auth
         workspace: git-auth
     
@@ -86,12 +95,15 @@ spec:
         operator: in
         values: ["true"]
       taskRef:
+        apiVersion: tekton.dev/v1
         resolver: bundles
         params:
         - name: bundle
           value: quay.io/konflux-ci/tekton-catalog/task-prefetch-dependencies-oci-ta:0.2@sha256:c5ebd3040df2511b8af762c8be946fd4ac9de60c16b81a9461534aea5979d86f
         - name: name
           value: prefetch-dependencies-oci-ta
+        - name: kind
+          value: task
       params:
       - name: SOURCE_ARTIFACT
         value: $(tasks.clone-repository.results.SOURCE_ARTIFACT)
@@ -107,12 +119,15 @@ spec:
         operator: in
         values: ["true"]
       taskRef:
+        apiVersion: tekton.dev/v1
         resolver: bundles
         params:
         - name: bundle
           value: quay.io/konflux-ci/tekton-catalog/task-buildah-oci-ta:0.4@sha256:f91db5817f403628dbd268fea69503ba910443ef8d71c86f093776f45f57adb9
         - name: name
           value: buildah-oci-ta
+        - name: kind
+          value: task
       params:
       - name: IMAGE
         value: "$(params.output-image)-spec-generator"
@@ -188,22 +203,17 @@ spec:
             set -e
             SPEC_FILE="microshift-gitops.spec"
             echo "--- Verifying generated file: ${SPEC_FILE} ---"
-            
             if [ -f "${SPEC_FILE}" ]; then
               echo "✅ File found. Displaying contents:"
-              echo "-------------------------------------------"
               cat "${SPEC_FILE}"
-              echo "-------------------------------------------"
             else
-              echo "❌ ERROR: File ${SPEC_FILE} not found in workspace!"
-              echo "Listing all files in workspace:"
+              echo "❌ ERROR: File ${SPEC_FILE} not found!"
               ls -laR
               exit 1
             fi
       workspaces:
       - name: source
         workspace: source
-  
   workspaces:
   - name: git-auth
     secret:
