--- a/.tekton/build-microshift-rpm-nmirasch-push.yaml
+++ b/.tekton/build-microshift-rpm-nmirasch-push.yaml
@@ -148,7 +148,7 @@ spec:
             set -euxo pipefail
             
             echo "Extracting source code from artifact..."
-            cp -R /workspace/. .
+            cp -R /src/. .
             echo "Workspace contents:"
             ls -laR
             
