share persist volume

--- a/.tekton/build-microshift-rpm-nmirasch-push.yaml
+++ b/.tekton/build-microshift-rpm-nmirasch-push.yaml
@@ -207,9 +207,5 @@ spec:
     secret:
       secretName: '{{ git_auth_secret }}'
   - name: source
-    volumeClaimTemplate:
-      spec:
-        accessModes: ["ReadWriteOnce"]
-        resources:
-          requests:
-            storage: 1Gi
+    persistentVolumeClaim:
+      claimName: "{{pvc_name}}"
