--- a/.tekton/build-microshift-rpm-nmirasch-pull-request.yaml
+++ b/.tekton/build-microshift-rpm-nmirasch-pull-request.yaml
@@ -212,9 +212,5 @@ spec:
     secret:
       secretName: '{{ git_auth_secret }}'
   - name: source
-    volumeClaimTemplate:
-      spec:
-        accessModes: ["ReadWriteOnce"]
-        resources:
-          requests:
-            storage: 1Gi
+    persistentVolumeClaim:
+      claimName: "{{pvc_name}}" 1Gi
