--- a/.tekton/konflux-components-testing-microshift-rpm-push.yaml
+++ b/.tekton/konflux-components-testing-microshift-rpm-push.yaml
@@ -211,5 +211,9 @@ spec:
     secret:
       secretName: '{{ git_auth_secret }}'
   - name: source
-    persistentVolumeClaim:
-      claimName: "{{pvc_name}}"
+    volumeClaimTemplate:
+      spec:
+        accessModes: ["ReadWriteOnce"]
+        resources:
+          requests:
+            storage: 1Gi
