--- a/scripts/microshift-gitops.spec.in
+++ b/scripts/microshift-gitops.spec.in
@@ -3,18 +3,18 @@
 
 %global package_name microshift-gitops
 %global product_name OpenShift GitOps (ArgoCD) components for MicroShift
-%global microshift_gitops_version ${CI_X_VERSION}.${CI_Y_VERSION}.${CI_Z_VERSION}
-%global microshift_gitops_release %(echo ${CI_SPEC_RELEASE} | sed -e s/rhel-9-//g)
-%global commitid ${CI_ARGO_CD_UPSTREAM_COMMIT}
+%global microshift_gitops_version REPLACE_CI_X_VERSION.REPLACE_CI_Y_VERSION.REPLACE_CI_Z_VERSION
+%global microshift_gitops_release %(echo REPLACE_CI_SPEC_RELEASE | sed -e s/rhel-9-//g)
+%global commitid REPLACE_CI_ARGO_CD_UPSTREAM_COMMIT
 %global source_dir argo-cd-%{commitid}
-%global source_tar argo-cd-${CI_ARGO_CD_UPSTREAM_COMMIT}.tar.gz
+%global source_tar argo-cd-REPLACE_CI_ARGO_CD_UPSTREAM_COMMIT.tar.gz
 
 Name:           %{package_name}
 Version:        %{microshift_gitops_version}
 Release:        %{microshift_gitops_release}%{?dist}
 Summary:        The %{product_name} package provides the required kustomize manifests for the OpenShift GitOps (ArgoCD) components to be installed on MicroShift.
 License:        ASL 2.0
-URL:            ${CI_ARGO_CD_UPSTREAM_URL}/commit/%{commitid}
+URL:            REPLACE_CI_ARGO_CD_UPSTREAM_URL/commit/%{commitid}
 
 Source0:        %{source_tar}
 BuildRequires:  sed
