--- a/.tekton/konflux-components-testing-microshift-rpm-push.yaml
+++ b/.tekton/konflux-components-testing-microshift-rpm-push.yaml
@@ -30,6 +30,8 @@ spec:
     value: "{{ target_branch }}"
   - name: hermetic
     value: "true"
+  - name: build-architectures
+    value: '[aarch64, x86_64]'
   pipelineRef:
     resolver: git
     params:
