only build-architectures aarch64 and 86_64

--- a/.tekton/konflux-components-testing-microshift-rpm-pull-request.yaml
+++ b/.tekton/konflux-components-testing-microshift-rpm-pull-request.yaml
@@ -32,7 +32,9 @@ spec:
   - name: hermetic
     value: "true"
   - name: build-architectures
-    value: '[aarch64, x86_64]'
+    value:
+    - aarch64
+    - x86_64
   pipelineRef:
     resolver: git
     params:
