added rpms folder

--- a/.tekton/konflux-components-testing-microshift-rpm-push.yaml
+++ b/.tekton/konflux-components-testing-microshift-rpm-push.yaml
@@ -22,6 +22,12 @@ spec:
     value: quay.io/redhat-user-workloads/rh-openshift-gitops-tenant/microshift-gitops-rpm:{{revision}}
   - name: package-name
     value: microshift-gitops
+  - name: context
+    value: rpms/microshift-gitops
+  - name: path-context
+    value: rpms/microshift-gitops
+  - name: context-path
+    value: rpms/microshift-gitops
   - name: git-url
     value: "{{ source_url }}"
   - name: revision
