--- a/.tekton/component-testing-rpm-microshift-gitops-folder-pull-request.yaml
+++ b/.tekton/component-testing-rpm-microshift-gitops-folder-pull-request.yaml
@@ -25,6 +25,8 @@ spec:
     value: '{{source_url}}'
   - name: revision
     value: '{{revision}}'
+  - name: target-branch
+    value: "{{ target_branch }}"
   - name: path-context
     value: rpms/microshift-gitops
   - name: ociStorage
