--- a/.tekton/component-testing-rpm-microshift-gitops-folder-pull-request.yaml
+++ b/.tekton/component-testing-rpm-microshift-gitops-folder-pull-request.yaml
@@ -9,9 +9,7 @@ metadata:
     pipelinesascode.tekton.dev/cancel-in-progress: "true"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
-      == "GITOPS-6959_rpm_microshift-gitops_folder" && ( "rpms/microshift-gitops/***".pathChanged()
-      || ".tekton/component-testing-rpm-microshift-gitops-folder-pull-request.yaml".pathChanged()
-      )
+      == "GITOPS-6959_rpm_microshift-gitops_folder"
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: testing-rpms-builds
