--- a/.tekton/component-testing-rpm-microshift-gitops-folder-push.yaml
+++ b/.tekton/component-testing-rpm-microshift-gitops-folder-push.yaml
@@ -8,9 +8,7 @@ metadata:
     pipelinesascode.tekton.dev/cancel-in-progress: "false"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch
-      == "GITOPS-6959_rpm_microshift-gitops_folder" && ( "rpms/microshift-gitops/***".pathChanged()
-      || ".tekton/component-testing-rpm-microshift-gitops-folder-push.yaml".pathChanged()
-      )
+      == "GITOPS-6959_rpm_microshift-gitops_folder"
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: testing-rpms-builds
