--- a/rpms/microshift-gitops/microshift-gitops.spec.in
+++ b/rpms/microshift-gitops/microshift-gitops.spec.in
@@ -105,11 +105,11 @@ EOF
 cat <<EOF >>"manifests/microshift-gitops/kustomization.yaml"
 images:
   - name: quay.io/argoproj/argocd
-    newName: registry.redhat.io/openshift-gitops-1/argocd-rhel9
-    digest: "sha256:8168018c4ffadcda01fea61ec2bf005b556a28966dfdf60cf922a37392bcc987"
+    newName: REPLACE_ARGO_CD_IMAGE_URL
+    digest: "REPLACE_ARGO_CD_CONTAINER_SHA_ARM"
   - name: redis
-    newName: registry.redhat.io/rhel9/redis-7
-    digest: "sha256:c796538bad7613deb1fba2bb76e736a6376b25ab97b2f944e67af00e01f5d965"
+    newName: REPLACE_REDIS_IMAGE_URL
+    digest: "REPLACE_REDIS_CONTAINER_SHA_ARM"
 EOF
 %endif
 
@@ -117,11 +117,11 @@ EOF
 cat <<EOF >>"manifests/microshift-gitops/kustomization.yaml"
 images:
   - name: quay.io/argoproj/argocd
-    newName: registry.redhat.io/openshift-gitops-1/argocd-rhel9
-    digest: "sha256:5f35a4ed723fa364bd58bc56a9491915ec8bed256a056b07429e1957580b1c4f"
+    newName: REPLACE_ARGO_CD_IMAGE_URL
+    digest: "REPLACE_ARGO_CD_CONTAINER_SHA_X86"
   - name: redis
-    newName: registry.redhat.io/rhel9/redis-7
-    digest: "sha256:300c0fd54f8f49eba19e6a16745fa7e225f1f66b571c8e02cd098ef45e03d1c8"
+    newName: REPLACE_REDIS_IMAGE_URL
+    digest: "REPLACE_REDIS_CONTAINER_SHA_X86"
 EOF
 %endif
 
@@ -130,11 +130,11 @@ mkdir -p "microshift-assets"
 cat <<EOF >"microshift-assets/release-gitops-arm64.json"
 {
   "release": {
-    "base": "v1.17.0-5"
+    "base": "REPLACE_ARGO_CD_VERSION"
   },
   "images": {
-    "openshift-gitops-argocd": "registry.redhat.io/openshift-gitops-1/argocd-rhel9@sha256:8168018c4ffadcda01fea61ec2bf005b556a28966dfdf60cf922a37392bcc987",
-    "redis": "registry.redhat.io/rhel9/redis-7@sha256:c796538bad7613deb1fba2bb76e736a6376b25ab97b2f944e67af00e01f5d965"
+    "openshift-gitops-argocd": "REPLACE_ARGO_CD_IMAGE_URL@REPLACE_ARGO_CD_CONTAINER_SHA_ARM",
+    "redis": "REPLACE_REDIS_IMAGE_URL@REPLACE_REDIS_CONTAINER_SHA_ARM"
   }
 }
 EOF
@@ -142,11 +142,11 @@ EOF
 cat <<EOF >"microshift-assets/release-gitops-x86_64.json"
 {
   "release": {
-    "base": "v1.17.0-5"
+    "base": "REPLACE_ARGO_CD_VERSION"
   },
   "images": {
-    "openshift-gitops-argocd": "registry.redhat.io/openshift-gitops-1/argocd-rhel9@sha256:5f35a4ed723fa364bd58bc56a9491915ec8bed256a056b07429e1957580b1c4f",
-    "redis": "registry.redhat.io/rhel9/redis-7@sha256:300c0fd54f8f49eba19e6a16745fa7e225f1f66b571c8e02cd098ef45e03d1c8"
+    "openshift-gitops-argocd": "REPLACE_ARGO_CD_IMAGE_URL@REPLACE_ARGO_CD_CONTAINER_SHA_X86",
+    "redis": "REPLACE_REDIS_IMAGE_URL@REPLACE_REDIS_CONTAINER_SHA_X86"
   }
 }
 EOF
