--- a/.github/workflows/generate-spec-file.yaml
+++ b/.github/workflows/generate-spec-file.yaml
@@ -44,6 +44,9 @@ on:
 jobs:
   update-spec-and-create-pr:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
