--- a/rpms/microshift-gitops/microshift-gitops.spec.in
+++ b/rpms/microshift-gitops/microshift-gitops.spec.in
@@ -10,7 +10,7 @@
 %global source_tar argo-cd-sources.tar.gz
 
 Name:           %{package_name}
-Version:        %{microshift_gitops_version}
+Version:        %{microshift_gitops_release}
 Release:        %{microshift_gitops_release}%{?dist}
 Summary:        The %{product_name} package provides the required kustomize manifests for the OpenShift GitOps (ArgoCD) components to be installed on MicroShift.
 License:        ASL 2.0
@@ -31,7 +31,7 @@ BuildArch: noarch
 
 %description release-info
 The %{package_name}-release-info package provides release information files for this
-release. These files contain the list of container image references used by
+release %{microshift_gitops_version}. These files contain the list of container image references used by
 MicroShift GitOps and can be used to embed those images into osbuilder blueprints.
 An example of such osbuilder blueprints for x86_64 and aarch64 platforms are
 also included in the package.
