--- a/rpms/microshift-gitops/microshift-gitops.spec.in
+++ b/rpms/microshift-gitops/microshift-gitops.spec.in
@@ -3,14 +3,15 @@
 
 %global package_name microshift-gitops
 %global product_name OpenShift GitOps (ArgoCD) components for MicroShift
-%global microshift_gitops_version REPLACE_MICROSHIFT_GITOPS_VERSION
+%global microshift_gitops_version REPLACE_MICROSHIFT_GITOPS_RELEASE
+#%global microshift_gitops_version REPLACE_MICROSHIFT_GITOPS_VERSION
 %global microshift_gitops_release REPLACE_MICROSHIFT_GITOPS_RELEASE
 %global argocdtag REPLACE_CI_ARGO_CD_UPSTREAM_TAG
 %global source_dir argo-cd-%{argocdtag}
 %global source_tar argo-cd-sources.tar.gz
 
 Name:           %{package_name}
-Version:        %{microshift_gitops_release}
+Version:        %{microshift_gitops_version}
 Release:        %{microshift_gitops_release}%{?dist}
 Summary:        The %{product_name} package provides the required kustomize manifests for the OpenShift GitOps (ArgoCD) components to be installed on MicroShift.
 License:        ASL 2.0
@@ -31,7 +32,7 @@ BuildArch: noarch
 
 %description release-info
 The %{package_name}-release-info package provides release information files for this
-release %{microshift_gitops_version}. These files contain the list of container image references used by
+release. These files contain the list of container image references used by
 MicroShift GitOps and can be used to embed those images into osbuilder blueprints.
 An example of such osbuilder blueprints for x86_64 and aarch64 platforms are
 also included in the package.
