--- a/.tekton/microshift-gitops-rpm-pull-request.yaml
+++ b/.tekton/microshift-gitops-rpm-pull-request.yaml
@@ -9,13 +9,13 @@ metadata:
     pipelinesascode.tekton.dev/cancel-in-progress: "true"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
-      == "main"
+      == "release-1.16"
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: testing-rpms-builds
-    appstudio.openshift.io/component: microshift-gitops-rpm-testing-main
+    appstudio.openshift.io/component: microshift-gitops-rpm-testing-release-1-16
     pipelines.appstudio.openshift.io/type: build
-  name: microshift-gitops-rpm-testing-main-on-pull-request
+  name: microshift-gitops-rpm-testing-release-1-16-on-pull-request
   namespace: rh-openshift-gitops-tenant
 spec:
   params:
